Rewrite Footer, CheckoutContent using MUI components

--- a/src/assets/styles/HeaderMenuIcons.css
+++ b/src/assets/styles/HeaderMenuIcons.css
@@ -1,5 +1,4 @@
- 
-/* Dropdown Login Form */
+/*  
 .login-dropdown {
     position: absolute;
     top: 100%;
@@ -72,4 +71,4 @@
     position: relative;
     font-weight: normal;
     font-size: var(--fontSize);
-  }
+  } */
