--- a/src/assets/styles/Header.css
+++ b/src/assets/styles/Header.css
@@ -1,10 +1,8 @@
-/* Reset cơ bản */
-
+/* 
   :root {
     --primary-color: #000;
     --secondary-color: #fff;
   }
-  /* Header container */
   header {
     width: 100%;
     font-weight: 500;
@@ -12,7 +10,6 @@
     background-color: #f4f4f4;
   }
   
-  /* Top bar */
   .headerTopBar {
     display: flex;
     position: relative;
@@ -21,13 +18,11 @@
     padding: var(--paddingTopHeader) var(--paddingRight) var(--paddingBottomHeader) var(--paddingLeft);
   }
   
-  /* Logo */
   .headerTopBar-logo {
     font-size: 24px;
     font-weight: var(--fontWeightXL);
   }
   
-  /* Search box */
   .headerTopBar-searchBox {
     display: flex;
     align-items: center;
@@ -52,7 +47,6 @@
     margin-right: 8px;
   }
   
-  /* Menu bên phải */
   .headerTopBar-menu {
     display: flex;
     gap: 10px;
@@ -80,22 +74,7 @@
   .headerTopBar-menuItem svg {
     display: block;
   }
-  /* .login-divider::before,
-  .login-divider::after {
-    content: "";
-    position: absolute;
-    top: 50%;
-    width: 45%;
-    height: 1px;
-    background-color: #ddd;
-  }
-  .login-divider::before {
-    left: 0;
-  }
-  .login-divider::after {
-    right: 0;
-  }
-   */
+
   .social-login {
     display: flex;
     align-items: center;
@@ -124,7 +103,6 @@
     font-weight: var(--fontWeightXL);
   }
   
-  /* navBar */
   .headerNavbarMenuList {
     display: flex;
     list-style: none;
@@ -156,7 +134,6 @@
     font-size: var(--fontSize);
   }
    
-  /* Responsive styling */
   @media (max-width: 992px) {
     .headerTopBar {
       padding: var(--paddingTopHeader) 40px var(--paddingBottomHeader) 40px;
@@ -189,4 +166,4 @@
     .headerTopBar-searchBox {
       width: 200px;
     }
-  }
+  } */
