--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,4 @@
-/* CSS cho Footer */
-footer {
+/* footer {
   --paddingLeftFooter: 50px;
   --paddingRightFooter: 50px;
   --paddingTopFooter: 50px;
@@ -109,7 +108,6 @@ footer {
     background-color: white;
   }
   
-  /* Responsive */
   @media (max-width: 1024px) {
     .footerGridItem {
       grid-template-columns: repeat(3, 1fr);
@@ -140,4 +138,4 @@ footer {
     .footerContainer {
       padding: 0 20px;
     }
-  } 
+  }  */
