Rewrite SlideShowConten.jsx using MUI

--- a/src/components/SlideShow/SlideShow.css
+++ b/src/components/SlideShow/SlideShow.css
@@ -1,5 +1,4 @@
-/* Slideshow container */
-.slideshow-container {
+/* .slideshow-container {
     max-width: 100%;
     position: relative;
     margin: auto;
@@ -75,4 +74,4 @@
 
 .mySlides:first-child {
     display: block;
-} 
+}  */
