update page imports and restructure project files

--- a/src/assets/styles/UserShow.css
+++ b/src/assets/styles/UserShow.css
@@ -1,4 +1,4 @@
-.sectionUserShowCase {
+/* .sectionUserShowCase {
     padding: var(--paddingTop) var(--paddingRight) var(--paddingBottom) var(--paddingLeft);
     width: 100%;
     display: flex;
@@ -105,4 +105,4 @@
     }
   }
 
-
+ */
